--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
-remote_theme: pages-themes/slate@v0.2.0
-plugins:
-- jekyll-remote-them
-
 title: METS: Metadata Encoding and Transmission Standard
 show_downloads: false
+theme: jeykll-theme-slate
+
+remote_theme: pages-themes/slate@v0.2.0
+plugins:
+- jekyll-remote-theme
+
