--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
-title: METS: Metadata Encoding and Transmission Standard
+title: "METS: Metadata Encoding and Transmission Standard"
 show_downloads: false
-theme: jeykll-theme-slate
-
 remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme
