--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
-title: "METS: Metadata Encoding and Transmission Standard"
+title: "METS"
+description: "Metadata Encoding and Transmission Standard"
 show_downloads: false
-remote_theme: pages-themes/slate@v0.2.0
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
 
